# chatguru-nps-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat
src/: config.py  main.py  util.py
src/db/mysql/: configs.py
src/db/sqlite/: avaliacao.py  config.py  db.py
src/dtos/: avaliacao_atendimento_dto.py
src/etl/: load.py  transform.py
src/integrations/google/: gmail.py
